syntax = "proto3";
package diff_pkg_refer_1;

message Demo1{};
